# gnn-dnr

./: .gitignore  README.md  experiment_results_table.tex  experiment_results_table_2.tex  experiment_results_table_old.tex  experimental_results_table.tex  model.ilp  model.lp  pyproject.toml
data_generation/: 1_create_dataset.slurm  1_create_gt.slurm  create_buurts.py  create_dataset.py  define_ground_truth.py  run_buurts.slurm
debug_model_values/: Challenging_Radiality_Test_SCF_Radiality_model_values.json  Four_Node_Radiality_Test_SCF_Radiality_model_values.json  Multiple_Substation_Test_SCF_Radiality_model_values.json  Obvious_Improvement_Test_SCF_Radiality_model_values.json  Power_Balance_Test_SCF_Radiality_model_values.json  Radiality_Test_SCF_Radiality_model_values.json  Triangle_Loop_SCF_Radiality_model_values.json  Voltage_Bounds_Test_SCF_Radiality_model_values.json  Voltage_Drop_Test_SCF_Radiality_model_values.json
debug_model_values_cvxpy/: Challenging_Radiality_Test_SCF_Radiality_model_values.json  Radiality_Test_SCF_Radiality_model_values.json  Triangle_Loop_SCF_Radiality_model_values.json
dnr-gnn/: pyproject.toml
dnr-gnn/wandb/run-20250223_222400-wumx2vw9/: run-wumx2vw9.wandb
dnr-gnn/wandb/run-20250223_222400-wumx2vw9/files/: wandb-metadata.json
dnr-gnn/wandb/run-20250223_222450-vswfslm6/: run-vswfslm6.wandb
dnr-gnn/wandb/run-20250223_222450-vswfslm6/files/: wandb-metadata.json
dnr-gnn/wandb/run-20250223_222756-lgmsvnp5/: run-lgmsvnp5.wandb
dnr-gnn/wandb/run-20250223_222756-lgmsvnp5/files/: wandb-metadata.json
dnr-gnn/wandb/run-20250223_222956-n5spapu4/: run-n5spapu4.wandb
dnr-gnn/wandb/run-20250223_222956-n5spapu4/files/: config.yaml  wandb-metadata.json
dnr-gnn/wandb/run-20250223_223120-upmld9kz/: run-upmld9kz.wandb
dnr-gnn/wandb/run-20250223_223120-upmld9kz/files/: wandb-metadata.json
dnr-gnn/wandb/run-20250224_092153-lf9tgmk4/: run-lf9tgmk4.wandb
dnr-gnn/wandb/run-20250224_092153-lf9tgmk4/files/: wandb-metadata.json
m_additionals/: 1_create_dataset.slurm  1_create_gt.slurm  create_dataset.py  define_ground_truth.py
model_search/: 0_control.ipynb  1_run_training.slurm  advanced_slurm_runner.sh  all_experiments.sh  cvx_infeasibility_analysis.py  first_model.py  generate_predicitons.sh  hpo copy.py  hpo-models.slurm  hpo-solo.py  hpo.py  hpo.slurm  load_data.py  load_data2.py  main.py  main2.py  plot_architecture.py  predict_then_optimize.py  preprocess_data.py  process_experiments.py  run_experiments.py  single_run.sh  slurm_direct_prediction.sh  slurm_hard_warmstart.sh  slurm_soft_warmstart.sh  submit_baseline_job.sh  test.py  train.py  train.slurm  trial_to_config.py
src/: SOCP_class_dnr.py  create_testval.py  cvxpy_SOCP.py  electrify_subgraph.py  electrify_subgraph2.py  electrify_subgraph3.py  logger_setup.py  loss_functions.py  optimization_logging.py
(+69 files in other folders)
